--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -49,7 +49,6 @@
 			}
 		}
 		&-dscr{
-			line-height: 25px;
 			margin-bottom: 15px;
 			@include clearfix();
 		}
@@ -79,6 +78,13 @@
 	}
 	&__list-1{
 		margin-right: 35px;
+	}
+	&__item{
+		margin-bottom: 20px;
+		line-height: 18px;
+		&:last-child{
+			margin-bottom: 0;
+		}
 	}
 }
 .social{
