--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,8 @@
 $green : #019875;
-$lightgreen : #6beea7;
 $lime : #e9fcf2;
+/* ui-main colors */
+$lightgreen: #6beea7;
 $green-header: #2fa377;
 $dark: #434a54;
+$gren-darker: #133c42;
 
