--- a/src/jade/_includes/_layout/_script.jade
+++ b/src/jade/_includes/_layout/_script.jade
@@ -1,2 +1,4 @@
 script(defer="defer" src="js/vendor/vendor.js")
 script(defer="defer" src="js/script.js")
+	//----КАРТА----//
+script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs_wXZFQCDT_UYIs-B5sztKV0GlQjNdaQ&")
