--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -28,11 +28,12 @@
 	}
 	&__list{
 		height: 100%;
+		margin-right: -55px;
 
 	}
 	&__item{
 		display: inline-block;
-		max-width: 140px;
+		width: 145px;
 		vertical-align: top;
 	    margin-right: 55px;
 	    &:last-child{
@@ -54,6 +55,22 @@
 		font-family: 'ubuntulight';
 	}
 }
+.shema__wrap{
+
+.img-wrap{
+	position: relative;
+	width: 105px;
+	height: 105px;
+	border: 2px solid $green;
+	border-radius:50%;
+	background: #ffffff;
+	img{
+		margin-top: 28px;
+		width: 45px;
+		height: 45px;
+	}
+}
+}
 .img-number-1:before{
 	content:"1";
 }
@@ -72,6 +89,8 @@
 .shema__img:before{
 	box-sizing:border-box;
 	position: absolute;
+	left: 0;
+	z-index: 5;
 	width: 35px;
 	height:35px;
 	@include border-radius(50%);
@@ -122,6 +141,12 @@
 		position: absolute;
 		bottom: 20px;
 		right: 20px;
+		width: 65px;
+		height: 65px;
+		img{
+		max-width: 100%;
+		max-height: 100%;
+		}
 	}
 }
 .more-links{
