added link with arrow :after/:before variants theme-style

--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -110,5 +110,5 @@ header.header
 			.contancts-block
 				a(href='tel:+88129205990').contacts__link 8 (812) 920 59 90
 				a(href='mailto:mss-standart@mail.ru').contacts__link mss-standart@mail.ru
-			a(href='#').take-call.button-main-theme Заказать звонок
+			a(href='#').take-call.button-mth_green Заказать звонок
 
