--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -127,22 +127,6 @@
 .more-links{
 	position: absolute;
 	bottom:20px;
-	&:after{
-		content:"";
-		display: inline-block;
-		vertical-align: middle;
-		width: 16px;
-		height: 16px;
-		background-image: url("../img/more-links.png");
-		margin-left: 7px;
-	}
-	span{
-		vertical-align: middle;
-		line-height: 20px;
-	}
-	&:hover{
-		text-decoration: underline;
-	}
 }
 
 .carousel-wrap {
@@ -229,6 +213,11 @@
 		.slider-buy{
 			vertical-align: middle;
 			display: inline-block;
+			font-size: 18px;
+			line-height: 22px;
+			font-family: 'ubuntumedium';
+			font-weight: 600;
+			text-align: center;
 			padding: 12px 30px;
 			margin-right: 17px;
 		}
@@ -237,18 +226,9 @@
 		    font-family: 'ubuntumedium';
 		    line-height: 26px;
 		    font-size: 18px;
-			display: inline-block;
 			text-align: center;
-			color: #133c42;
-			border: 2px solid #133c42;
-			@include border-radius(3px);
 			padding: 8px 25px;
 			vertical-align: middle;
-			@include transition(.25s);
-		}
-		.slider-details:hover {
-			background: #133c42;
-			color: #fff;
 		}
 	}
 }
@@ -401,18 +381,9 @@
 		    font-weight: 600;
 		    line-height: 20px;
 		    font-size: 14px;
-			display: inline-block;
 			text-align: center;
-			color: #133c42;
-			border: 2px solid #133c42;
-			@include border-radius(3px);
 			padding: 3px 14px;
 			vertical-align: middle;
-			@include transition(.25s);
-			&:hover {
-				background: #133c42;
-				color: #fff;
-			}
 		}
 
 .last-news__title{
