--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 $green : #019875;
 $lime : #e9fcf2;
 $lightgray : #e6e7e9;
+$gray : #7d8c92;
 /* ui-main colors */
 $lightgreen: #6beea7;
 $green-header: #2fa377;
