--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -30,7 +30,7 @@ header.header
 						| Cертификация ISO
 					ul.dropped-menu
 						li.dropped-menu__li
-							a.dropped-menu__li-title(href='#' alt='роздел')
+							a.dropped-menu__li-title(href='odnausluga-v2.html' alt='роздел')
 								| Сертификация систем менеджмента качества
 							ul.inner-drop-menu
 								li.inner-drop-menu__li
