--- a/src/jade/article.jade
+++ b/src/jade/article.jade
@@ -156,9 +156,9 @@ block main
 					a.ques-btn(href='#') Спросить
 		.article__links-wrap
 			.container
-				a(href="#").arc-prev-link
+				a(href="#").arc-prev-link.podrobn-link_pre
 					| Название предыдщей статьи
-				a(href="#").arc-next-link
+				a(href="#").arc-next-link.podrobn-link
 					| Название следующей статьи
 		.container
 			.article__arcs-wrap
@@ -173,7 +173,9 @@ block main
 						| играет важную роль в формировании модели 
 						| развития. Значимость этих проблем 
 						| настолько очевидна, что новая модель 
-						| организационной ...
+						| организационной
+						a(href="#").podrobn-link
+							| ...
 				.article__arcs-item
 					span.arcs-date
 						| 12.06.2016
@@ -185,7 +187,9 @@ block main
 						| играет важную роль в формировании модели 
 						| развития. Значимость этих проблем 
 						| настолько очевидна, что новая модель 
-						| организационной ...
+						| организационной
+						a(href="#").podrobn-link
+							| ...
 				.article__arcs-item
 					span.arcs-date
 						| 12.06.2016
@@ -197,4 +201,6 @@ block main
 						| играет важную роль в формировании модели 
 						| развития. Значимость этих проблем 
 						| настолько очевидна, что новая модель 
-						| организационной ...
+						| организационной
+						a(href="#").podrobn-link
+							| ...
