--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -106,6 +106,7 @@
 		}
 		&-item{
 			display: inline-block;
+			vertical-align: top;
 			position: relative;
 			width: 30%;
 			text-align: left;
