--- a/src/jade/partners_single.jade
+++ b/src/jade/partners_single.jade
@@ -22,8 +22,38 @@ block main
 					li.partners__item Мониторинг целевых и конкурентных групп, поиск площадок с высокой концентрацией целевой аудитории, интеграция
 					li.partners__item Координация работы SMM-агентства: привлечение и увеличение подписчиков, поддержание пользовательской активности в группах, работа с мнениями, нейтрализация негативных пользователей/работа с негативом
 	section.reviews-single
-		h1.h1-und Блок Сані
-		
+		.container
+			h2.reviews-single__title.h2 Отзывы компании о работе с нами
+			.feedback-wrap
+				.feedback__text-wrap
+					.feedback__text
+						| Равным образом новая модель организационной деятельности
+						| влечет за собой процесс внедрения и модернизации
+						| соответствующий условий активизации. Задача организации, в
+						| особенности же новая модель организационной деятельности
+						| позволяет выполнять важные задания по разработке позиций,
+						| занимаемых участниками в отношении поставленных задач.
+						| Товарищи! постоянный количественный рост и сфера нашей
+						| активности позволяет выполнять важные задания по разработке
+						| форм развития. Разнообразный и богатый опыт новая модель
+						| организационной деятельности представляет собой интересный | эксперимент проверки
+					.feedback__author
+						| Фамилия Имя
+					.feedback__author-photo
+						| тег img
+				ul.feedback__img-block
+					li.feedback__img-wrap
+						img(src='img/content/sertif-img.jpg')
+					li.feedback__img-wrap
+						img(src='img/content/sertif-img.jpg')
+		.reviews-single__nav-line
+			.container
+				.podrobn-link_pre
+					| Имя Компании парнтера
+				.podrobn-link
+					| Смотреть следющий
+
+
 
 
 
