services-side-left fixed

--- a/src/jade/odnausluga-v2.jade
+++ b/src/jade/odnausluga-v2.jade
@@ -19,6 +19,8 @@ block main
 					| по безопасности пищевой продукции»
 			.services__content-wrap
 				.services-side-left
+					h2.h2
+						| Сертификация систем менеджмента качества
 					ul.services__list
 						li.services__item
 							a.services__link.services__link_active(href="#") 
