--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -138,12 +138,66 @@
 		}
 }
 .button__wrap{
+	margin: 0 auto;
+	width: 790px;
+	text-align: right;
+	margin-bottom: 90px;
 }
 .google-captcha,
 .button-group{
 }
 .google-captcha{
+	display: inline-block;
 	background: $gray;
 	width: 300px;
 	height: 75px;
+	margin-bottom: 40px;
+}
+.button-group{
+	.button-mth_dbgreen{
+		padding: 5px 15px;
+	}
+	.button-mth_green{
+		margin-left: 18px;
+		padding: 7px 15px;
+	}
+}
+.form__group_valid  input[placeholder] {
+ ::-webkit-input-placeholder {color:$lightgreen;}
+::-moz-placeholder          {color:$lightgreen;}
+:-moz-placeholder           {color:$lightgreen;}
+:-ms-input-placeholder      {color:$lightgreen;}  
+color: $lightgreen;
+}
+.form__group_no-valid  input[placeholder] {
+ ::-webkit-input-placeholder {color:$red;}
+::-moz-placeholder          {color:$red;}
+:-moz-placeholder           {color:$red;}
+:-ms-input-placeholder      {color:$red;}  
+color:red;
+}
+.form__group_valid,
+.form__group_no-valid{
+	position: relative;
+}
+.form__group_no-valid:before {
+	content: "";
+    display: block;
+    background-image: url(../img/icons/valid-no.png);
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    background-repeat: no-repeat;
+}
+.form__group_valid:before {
+	content: "";
+    display: block;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    background-repeat: no-repeat;
 }
