--- a/src/jade/promezhutuslugi.jade
+++ b/src/jade/promezhutuslugi.jade
@@ -1,7 +1,6 @@
 extends _layout.jade
 block main
-	section.news__with-pictures
-		//- Секция с картинками по сторонам
+	section.promezhutuslugi
 		.container
 			.breadcrumbs
 				ul.breadcrumbs__list
@@ -11,6 +10,71 @@ block main
 						a.breadcrumbs__link(href="#") Услуги
 					li.breadcrumbs__item
 						a.breadcrumbs__link.breadcrumbs__link_active(href="#") Сертификация систем менеджмента качества
-			.news__wrap
-				.news__title
+			.promezhutuslugi__wrap
+				.promezhutuslugi__title
 					h1.h1 Сертификация систем менеджмента качества
+				.promezhutuslugi__content-wrap
+					.promezhutuslugi__left-block
+						ul.menu-promezhutuslugi__list
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификация систем менеджмента качества	
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификация систем безопасности	
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификация социальной ответственности и защиты окружающей среды
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификат соответствия на персонал и услуги
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификаты Евразийского союза (ТР ТС)
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Внедрение ISO, разработка документации описание услуги
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Сертификация ГОСТ Р	
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Пожарная сертификация
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Допуски СРО
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Банковские гарантии
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Лицензирование
+							li.menu-promezhutuslugi__item
+								a(href="#").menu-promezhutuslugi__link Повышение квалификации
+					.promezhutuslugi__right-block
+						.first-block
+							ul.uslugi__list
+								li.uslugi__item
+									a(href="#").uslugi__link ХАССП
+									ul.poduslugi__list
+										li.poduslugi__item
+											a(href="#").poduslugi__link ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005) «Системы менеджмента безопасности пищевой продукции»
+										li.poduslugi__item
+											a(href="#").poduslugi__link ГОСТ Р 54762-2011/ISO/TS 22002-1:2009 «Программы предварительных требований по безопасности пищевой продукции
+										li.poduslugi__item
+											a(href="#").poduslugi__link ГОСТ Р 51705.1-2001 - Системы качества. Управление качеством пищевых продуктов на основе принципов ХАССП Общие требования
+
+
+						.second-blcok
+							ul.uslugi__list
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО 9001 - 2015 (ISO 9001:2015) «Системы менеджмента качества»
+								li.uslugi__item
+									a(href="#").uslugi__link Интегрированные системы менеджмента
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО 22000 - 2007 (ISO 22000:2005) «Системы менеджмента безопасности пищевой продукции»
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО/ТУ 16949-2009 (ГОСТ Р 51814.1-2004) «Требования к системе менеджмента качества в автомобильной промышленности и организациях, производящих соответствующие запасные части»
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО 13485-2011 (ISO 13485:2003) «Изделия медицинские. Системы менеджмента качества. Системные требования для целей регулирования»
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ РВ 0015-002-2012 «Система менеджмента предприятий оборонно-промышленного комплекса. Защита государственной тайны»
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО/МЭК 20000 (ISO 20000) «Адаптация международного стандарта ISO 20000 под российский рынок
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ИСО/ТУ 29001-2007 «Система менеджмента качества организаций, поставляющих продукцию и предоставляющих услуги в нефтяной, нефтехимической и газовой промышленности»
+								li.uslugi__item
+									a(href="#").uslugi__link ГОСТ Р ЕН 9100-2011 «Системы менеджмента качества организаций авиационной, космической и оборонных отраслей промышленности»
+
+
+			
+			
