box-shadow added

--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -9,7 +9,7 @@ header.header
 					li.main-menu__li
 						a(href='news.html' alt='Новости') Новости
 					li.main-menu__li
-						a(href='#' alt='Публикации') Публикации
+						a(href='article.html' alt='Публикации') Публикации
 					li.main-menu__li
 						a(href='company.html' alt='О компании') О компании
 					li.main-menu__li
