--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -162,7 +162,7 @@ block main
 									| модели развития. Значимость этих проблем настолько очевидна,
 									| что новая модель организационной
 									a.podrobn-link(href='#' alt='больше') ...
-					a(href='#' alt='читать все').read-all.button-mth_dbgreen
+					a(href='news.html' alt='читать все').read-all.button-mth_dbgreen
 						| Читать все новости
 
 
@@ -182,7 +182,7 @@ block main
 									| модели развития. Значимость этих проблем настолько очевидна,
 									| что новая модель организационной
 									a.podrobn-link(href='#' alt='больше') ...
-					a(href='#' alt='читать все').read-all.button-mth_dbgreen
+					a(href='news.html' alt='читать все').read-all.button-mth_dbgreen
 						| Читать все публикации
 	section.partners
 		.container
